--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
               <div class="row">
                   <div class="col-md-12">
                      <div class="full">
-                        <p>© 2019 All Rights Reserved. Design by <a href="https://html.design">Free Html Templates</a></p>
+                        <p>© 2019 All Rights Reserved. Design by Rinki Kumari</p>
                      </div>
                   </div>
               </div>
