--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>avalon</title>
+      <title>Rinki</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -402,7 +402,7 @@
            <div class="row">
               <div class="col-md-6">
                 <div class="full">
-                  <h3>AVALON MOTORS</h3>
+                  <h3>RINKI MOTORS</h3>
                 </div>
               </div>
               <div class="col-md-6">
@@ -449,7 +449,7 @@
                  <div class="full">
                    <h4 class="widget_heading">Contact Details</h4>
                    <div class="full cont_footer">
-                     <p><strong>AVALON Car : Adderess</strong><br><br>Newyork 10012, USA<br>Phone: +987 654 3210<br>demo@gmail.com</p>
+                     <p><strong>Rinki Car : Adderess</strong><br><br>Newyork 10012, USA<br>Phone: +987 654 3210<br>demo@gmail.com</p>
                    </div>
                  </div>
               </div>
